--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,12 +1,14 @@
 @import "compass";
-
-@import "base";
-@import "parts";
-@import "plugins";
+@include global-reset;
 
 @import "custom/colors";
 @import "custom/fonts";
 @import "custom/layout";
+@import "base";
+@import "partials";
+@import "plugins/**/*";
 @import "custom/styles";
 
-@import "greyshade";
+@import "custom/coderay-github";
+$fontAwesomePath: 'fontawesome-webfont';
+@import "font-awesome/font-awesome";
