--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,5 +1,4 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/" class="nav-link">Blog</a></li>
-  <li><a href="{{ root_url }}/blog/archives" class="nav-link">Archives</a></li>
-  <li><a href="{{ site.subscribe_rss }}" class="nav-link">RSS</a></li>
+  <li><a href="{{ root_url }}/">Blog</a></li>
+  <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
 </ul>
