--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,1 +1,2 @@
-<span>&copy; {{ site.time | date: '%Y' }} {{ site.author }}. Powered by <a href="http://octopress.org">Octopress</a> using the <a href="https://github.com/jez/hpstr-theme/">HPSTR Theme for Octopress</a>.</span>
+{% include custom/footer.html %}
+Design credit: <a href="http://shashankmehta.in/archive/2012/greyshade.html">Shashank Mehta</a>
