--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,38 +1,23 @@
-{% include doctype.html %}
-<head>
+{% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
-</head>
 
-<body id="post-index" {% if page.image.feature %}class="feature"{% endif %}>
-  {% include browser-upgrade.html %}
-  {% include navigation.html %}
-
-  <div class="entry-header">
-    {% if page.image.credit %}<div class="image-credit">Image source: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></div><!-- /.image-credit -->{% endif %}
-    {% if page.image.feature %}
-      <div class="entry-image">
-        <img src="{{ page.image.feature }}" alt="{{ page.title }}">
-      </div><!-- /.entry-image -->
-    {% endif %}
-    <div class="header-title">
-      <div class="header-title-wrap">
-        <h1>{{ site.title }}</h1>
-        <h2>{{ site.subtitle }}</h2>
-      </div><!-- /.header-title-wrap -->
-    </div><!-- /.header-title -->
-  </div><!-- /.entry-header -->
-
-  <div id="main" role="main">
-    {{ content }}
-  </div><!-- /#main -->
-
-  <div class="footer-wrapper">
-    <footer role="contentinfo">
-      {% include footer.html %}
-    </footer>
-  </div><!-- /.footer-wrapper -->
-
-  {% include scripts.html %}          
-  {% include custom/after_footer.html %}
+<body>
+	<div class="container">
+		<div class="left-col">
+			<div class="intrude-less">
+			<header id="header" class="inner">{% include header.html %}</header>				
+			</div>
+		</div>	
+		<div class="mid-col">
+			{% unless page.banner == false %}
+				{% include banner.html %}
+			{% endunless %}
+			<div class="mid-col-container">
+				<div id="content" class="inner">{{ content | expand_urls: root_url }}</div>
+			</div>
+			<footer id="footer" class="inner">{% include footer.html %}</footer>
+		</div>
+	</div>
+	{% include after_footer.html %}
 </body>
 </html>
