--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -28,5 +28,5 @@
 	<link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	{% include custom/head.html %}
-  {% include google_analytics.html %}
+  <!-- {% include google_analytics.html %} -->
 </head>
