--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -6,6 +6,10 @@
 {% endif %}
 <head>
 	<meta charset="utf-8">
+
+	<!-- 百度站长验证 -->
+	<meta name="baidu-site-verification" content="2OrNtKy8DJ" />
+	
 	<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 	<meta name="author" content="{{ site.author }}">
 
