--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -7,9 +7,11 @@
 <head>
 	<meta charset="utf-8">
 
-	<!-- 百度站长验证 -->
+	<meta name="google-site-verification" content="lesGxtKqoiA-8B70RI0FzkH_hPmzhskrFl_--iFbniY" />
+	<meta name="msvalidate.01" content="35197FB7C4DB18976D81AF324B472CDF" />
 	<meta name="baidu-site-verification" content="2OrNtKy8DJ" />
-	
+	<meta name="360-site-verification" content="88afde633388f0f420a98b6c1f296e17" />
+
 	<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 	<meta name="author" content="{{ site.author }}">
 
@@ -32,5 +34,5 @@
 	<!--<link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>-->
 	<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>-->
 	{% include custom/head.html %}
-  <!-- {% include google_analytics.html %} -->
+  	{% include google_analytics.html %}
 </head>
