--- a/source/_includes/scripts.html
+++ b/source/_includes/scripts.html
@@ -2,6 +2,6 @@
 <script>window.jQuery || document.write('<script src="{{ root_url }}/javascripts/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
 <script src="/javascripts/scripts.min.js"></script>
-<!-- {% include google_analytics.html %} -->
+{% include google_analytics.html %}
 {% if page.comments %}{% include disqus.html %}{% endif %}
 {% if page.mathjax %}{% include mathjax.html %}{% endif %}
