--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,3 +3,13 @@
     <li><a href="http://about.me/kimimaro">About Me</a></li>
     <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
 </ul>
+
+<!-- duckduckgo -->
+<!-- {% if site.simple_search %}
+<form action="{{ site.simple_search }}" method="get">
+  <fieldset role="search">
+    <input type="hidden" name="sites" value="blog.oneboxapp.com" />
+    <input class="search" type="text" name="q" results="0" placeholder="Search&hellip;"/>
+  </fieldset>
+</form>
+{% endif %} -->
